--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <title>Fortune Cookie</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js" charset="utf-8"></script> -->
+
     <script src="./js/scripts.js"></script>
 
   </head>
