--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,16 +1,77 @@
 html{
-  background: olive
+  background: black;
 }
 
 body {
-  background: lightyellow;
-  max-width: 900px;
-  border: 4px green ridge;
+  background: firebrick;
+  max-width: 800px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 8px red ridge;
+  text-align: center;
+  background-image: linear-gradient(to right, black 0%, silver 100%),  url('https://upload.wikimedia.org/wikipedia/commons/2/24/Fortune_cookie.png');
+  background-repeat: no-repeat;
+  background-size: 400px;
+  background-position: top right;
+  background-blend-mode: color-dodge;
+  min-width: 420px;
+}
+h1 {
+  text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
+  color: white;
+  font: 5em Georgia, "Bitstream Charter", "URW Bookman L", "Century Schoolbook L", serif;
+  text-align: left;
+  margin-left: 100px;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+
 #fortunecookie-list {
-  list-style-type: none;
-  background: white;
-  border: 1px solid silver:
-  border-radius: 5px;
+  /*list-style-type: none;*/
+  list-style-type: trad-chinese-informal;
+  width: 60%;
+  padding: 20px 40px 20px 70px;
+  margin: auto;
+  background: tomato;
+  text-align: left;
+
+  /*color: black;*/
+  /*text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px darkblue;*/
+  border: 1px solid black;
+  box-shadow: 4px 6px 8px 4px rgba(0, 0, 0, 0.3), 4px 6px 20px 4px rgba(0, 0, 0, 0.3);
+}
+
+.divider {
+  background: maroon;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  display: inline-block;
+  width: 100%;
+}
+
+.divider img {
+  border: inset 4px red;
+  box-shadow: 4px 6px 8px 4px rgba(0, 0, 0, 0.3), 4px 6px 20px 4px rgba(0, 0, 0, 0.3);
+}
+#new-cookie {
+  float: right;
+  width: 40%;
+}
+
+.factory-photo {
+  float: left;
+  width: 60%;
+}
+
+
+.photo-credits {
+  font-size: 0.7em;
+  font-style: italic;
+  margin: 0 0 -1em 0;
+  text-align: center;
 }
